force-app/main/default/objects/DepreciationExpense__c/DepreciationExpense__c.object-meta.xml
<CustomObject>
    <label>Depr Exps</label>
    <nameField>
        <displayFormat>DE-{000000}</displayFormat>
        <label>DEPRECIATION EXPENSE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depr Exps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>