force-app/main/default/objects/DepreciationExpense__c/fields/AccumulatedDepreciation__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedDepreciation__c</fullName>
    <inlineHelpText>Total Amount of Depreciation since Deprecation Start Date till now</inlineHelpText>
    <label>ACCUMULATED DEPRECIATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>