force-app/main/default/objects/DepreciationExpense__c/fields/AssetUsefulLifeYear__c.field-meta.xml
<CustomField>
    <fullName>AssetUsefulLifeYear__c</fullName>
    <label>ASSET USEFUL LIFE(YEAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>