force-app/main/default/objects/DepreciationExpense__c/fields/DeprecationFormula__c.field-meta.xml
<CustomField>
    <fullName>DeprecationFormula__c</fullName>
    <label>DEPRECIATION FORMULA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DepreciationMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DeprecationFormula</valueSetName>
    </valueSet>
</CustomField>