force-app/main/default/objects/DepreciationExpense__c/fields/DepreciationBasis__c.field-meta.xml
<CustomField>
    <fullName>DepreciationBasis__c</fullName>
    <inlineHelpText>Depreciation Basis=Asset Cost-Salvage Value</inlineHelpText>
    <label>DEPRECIATION BASIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>