force-app/main/default/objects/DepreciationExpense__c/fields/DepreciationEndDate__c.field-meta.xml
<CustomField>
    <fullName>DepreciationEndDate__c</fullName>
    <label>DEPRECIATION END DATE</label>
    <type>Date</type>
</CustomField>