force-app/main/default/objects/DepreciationExpense__c/fields/DepreciationMethod__c.field-meta.xml
<CustomField>
    <fullName>DepreciationMethod__c</fullName>
    <label>DEPRECIATION METHOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DepreciationMethod</valueSetName>
    </valueSet>
</CustomField>