force-app/main/default/objects/DepreciationExpense__c/fields/DepreciationStartDate__c.field-meta.xml
<CustomField>
    <fullName>DepreciationStartDate__c</fullName>
    <label>DEPRECIATION START DATE</label>
    <type>Date</type>
</CustomField>