force-app/main/default/objects/DepreciationExpense__c/fields/FacilityAssetID__c.field-meta.xml
<CustomField>
    <fullName>FacilityAssetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FACILITY ASSET ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>DEPRECIATION EXPENSE</relationshipLabel>
    <relationshipName>DepreciationExpense</relationshipName>
    <type>Lookup</type>
</CustomField>