force-app/main/default/objects/DepreciationExpense__c/fields/PurchasingInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>PurchasingInvoiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PURCHASING INVOICE ID</label>
    <referenceTo>PurchasingInvoice__c</referenceTo>
    <relationshipLabel>DEPRECIATION EXPENSE</relationshipLabel>
    <relationshipName>DepreciationExpense</relationshipName>
    <type>Lookup</type>
</CustomField>