force-app/main/default/objects/DepreciationExpense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DepreciationExpenseName__c</columns>
    <columns>DepreciationMethod__c</columns>
    <columns>DeprecationFormula__c</columns>
    <columns>AssetUsefulLifeYear__c</columns>
    <columns>AssetCost__c</columns>
    <columns>SalvageValue__c</columns>
    <columns>DepreciationBasis__c</columns>
    <columns>AccumulatedDepreciation__c</columns>
    <columns>RemainedDepreciation__c</columns>
    <columns>DepreciationBookBalance__c</columns>
    <columns>AccumulatedDepreciationFromRecording__c</columns>
    <columns>FacilityAssetID__c</columns>
    <columns>TruckFleetAssetID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>